Change example to localhost

--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,8 @@
             </h1>
 
             <h3>Example usage:</h3>
-            <code>https://zenith-twine.glitch.me/December%2015,%202015</code><br>
-            <code>https://zenith-twine.glitch.me/1450137600</code>
+            <code>http://localhost:5000/December%2015,%202015</code><br>
+            <code>http://localhost:5000/1450137600</code>
             <h3>Example output:</h3>
             <code>
                 {
